test/fail/forexp-or.app
//should contain a collection of Bool type
application test

  define page home() {
    var list : Bool := Or [ i + "6" | i : String in ["1","2"] ];
  }
